# GooCore

./: .gitignore  .gitmodules  .travis.yml  README.md
C++/: CMakeLists.txt  doxygen.conf.in
C++/include/: Colors.h  DCHelpers.h  GooCore.h  Helpers.h  NightwaveCore.h  QuickFilePanel.h  SplashScreen.h  TextWrap.h
C++/src/: Colors.cpp  DCHelpers.cpp  GooCore.cpp  Helpers.cpp  NightwaveCore.cpp  QuickFilePanel.cpp  SplashScreen.cpp  TextWrap.cpp  colors.py
C++/tests/: HelpersTest.h
